# aigc-mark-toolkit

./: .gitignore  README.EN.md  README.md  SKILL.md  inspect.json  pyproject.toml
agents/: openai.yaml
cli/aigc_mark_toolkit/: cli.py  toolkit.py
references/: boundaries.md  methodology.md  promotion.json
skill/: run-local-skill.ps1  run-local-skill.sh
tests/: test_toolkit.py
